# flake8-requirements

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: check.yaml  codecov.yaml  publish.yaml  pythoncheck.yml  pythonpublish.yml
src/flake8_requirements/: __init__.py  checker.py  modules.py
test/: test_checker.py  test_pep621.py  test_poetry.py  test_requirements.py  test_requirements.txt  test_setup.cfg  test_setup.py
